--- a/IoTSensorPortal/IoTSensorPortal/Views/_ViewImports.cshtml
+++ b/IoTSensorPortal/IoTSensorPortal/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using IoTSensorPortal.Models
 @using IoTSensorPortal.Models.AccountViewModels
 @using IoTSensorPortal.Models.ManageViewModels
+@using IoTSensorPortal.Infrastructure.Data.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
