--- a/IoTSensorPortal/IoTSensorPortal/Views/Shared/_Layout.cshtml
+++ b/IoTSensorPortal/IoTSensorPortal/Views/Shared/_Layout.cshtml
@@ -33,6 +33,12 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Sensor" asp-action="AllPublicSensors">View Public Sensors</a></li>
+                    @if (User.Identity.IsAuthenticated == true)
+                    {
+                    <li><a asp-area="" asp-controller="Sensor" asp-action="CreateSensor">Create Sensor</a></li>
+                    <li><a asp-area="" asp-controller="Sensor" asp-action="MySensors">My Sensors</a></li>
+                    }
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
