--- a/IoTSensorPortal/IoTSensorPortal/Views/Sensor/MySensors.cshtml
+++ b/IoTSensorPortal/IoTSensorPortal/Views/Sensor/MySensors.cshtml
@@ -65,7 +65,7 @@
                 @Html.DisplayFor(modelItem => item.LastUpdated)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Edit", "EditSensor", new { id = item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </td>
