--- a/IoTSensorPortal/IoTSensorPortal/Areas/Admin/Views/Admin/EditSensors.cshtml
+++ b/IoTSensorPortal/IoTSensorPortal/Areas/Admin/Views/Admin/EditSensors.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<IoTSensorPortal.Core.Models.SensorViewModel>
 @{
-    ViewData["Title"] = "MySensors";
+    ViewData["Title"] = "EditSensors";
 }
-<h2>My Sensors</h2>
+<h2>Edit Sensors</h2>
 <p>
-    <a asp-action="CreateSensor">Create New</a>
+    <a asp-action="CreateSensor" asp-area="">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -65,8 +65,8 @@
                 @Html.DisplayFor(modelItem => item.LastUpdated)
             </td>
             <td>
-                @Html.ActionLink("Edit", "EditSensor", new { id = item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Edit", "EditSensor", "Admin", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { area = "", id = item.Id }) |
                 @Html.ActionLink("Delete", "DeleteSensor", new { id = item.Id })
             </td>
         </tr>
