--- a/IoTSensorPortal/IoTSensorPortal/Views/Sensor/Details.cshtml
+++ b/IoTSensorPortal/IoTSensorPortal/Views/Sensor/Details.cshtml
@@ -61,6 +61,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new {  id = Model.Id  }) |
+    @Html.ActionLink("Edit", "EditSensor", new {  id = Model.Id  }) |
     <a asp-action="Index">Back to List</a>
 </div>
