--- a/IoTSensorPortal/IoTSensorPortal/Areas/Admin/Views/Admin/EditSensors.cshtml
+++ b/IoTSensorPortal/IoTSensorPortal/Areas/Admin/Views/Admin/EditSensors.cshtml
@@ -4,7 +4,7 @@
 }
 <h2>Edit Sensors</h2>
 <p>
-    <a asp-action="CreateSensor" asp-area="">Create New</a>
+    <a asp-action="CreateSensor" asp-area="">Create New Sensor</a>
 </p>
 <table class="table">
     <thead>
