--- a/IoTSensorPortal/IoTSensorPortal/Areas/Admin/Views/Admin/EditUsers.cshtml
+++ b/IoTSensorPortal/IoTSensorPortal/Areas/Admin/Views/Admin/EditUsers.cshtml
@@ -4,7 +4,7 @@
 }
 <h2>Edit Users</h2>
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New User</a>
 </p>
 <table class="table">
     <thead>
