--- a/IoTSensorPortal/IoTSensorPortal/Views/Sensor/AllPublicSensors.cshtml
+++ b/IoTSensorPortal/IoTSensorPortal/Views/Sensor/AllPublicSensors.cshtml
@@ -1,46 +1,43 @@
 ﻿@model IEnumerable<IoTSensorPortal.Core.Models.SensorViewModel>
 
-@{
-    ViewData["Title"] = "AllPublicSensors";
-}
-
 <h2>All Public Sensors</h2>
 
 <p>
-    <a asp-action="CreateSensor">Create New</a>
+    <a asp-action="CreateSensor">Create New Sensor</a>
 </p>
 <table class="table">
     <thead>
         <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Url)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.RefreshRate)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.MinValue)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.MaxValue)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.IsPublic)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.CurrentValue)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.LastUpdated)
-                </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Url)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.RefreshRate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.MinValue)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.MaxValue)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CurrentValue)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LastUpdated)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Owner)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @foreach (var item in Model)
+        {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Url)
@@ -57,17 +54,19 @@
             <td>
                 @Html.DisplayFor(modelItem => item.MaxValue)
             </td>
-            <td>
+            @*<td>
                 @Html.DisplayFor(modelItem => item.IsPublic)
-            </td>
+            </td>*@
             <td>
                 @Html.DisplayFor(modelItem => item.CurrentValue)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.LastUpdated)
             </td>
-           
+            <td>
+                @Html.DisplayFor(modelItem => item.Owner.UserName)
+            </td>
         </tr>
-}
+        }
     </tbody>
 </table>
