--- a/IoTSensorPortal/IoTSensorPortal/Views/Sensor/MySensors.cshtml
+++ b/IoTSensorPortal/IoTSensorPortal/Views/Sensor/MySensors.cshtml
@@ -4,7 +4,7 @@
 }
 <h2>My Sensors</h2>
 <p>
-    <a asp-action="CreateSensor">Create New</a>
+    <a asp-action="CreateSensor">Create New Sensor</a>
 </p>
 <table class="table">
     <thead>
