Azure sql database added

--- a/IoTSensorPortal/IoTSensorPortal/Views/Sensor/CreateSensor.cshtml
+++ b/IoTSensorPortal/IoTSensorPortal/Views/Sensor/CreateSensor.cshtml
@@ -52,6 +52,6 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="MySensors" asp-area="" asp-controller="Sensor">My sensors</a>
 </div>
 
