--- a/IoTSensorPortal/IoTSensorPortal/Views/Shared/_Layout.cshtml
+++ b/IoTSensorPortal/IoTSensorPortal/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     @if (User.Identity.IsAuthenticated == true)
                     {
-                        if (User.Claims.Any(s=>s.Value == "Admin"))
+                        if (User.IsInRole("Admin"))
                         {
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin <span class="caret"></span></a>
